--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,26 +1,94 @@
-﻿<div id="carouselExampleParagraphs" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <p class="d-block w-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus optio voluptates reprehenderit iste, porro fugit dolorum atque error enim ratione nulla? Cupiditate consequuntur cum vero corporis suscipit excepturi libero animi.</p>
-        </div>
-        <div class="carousel-item">
-            <p class="d-block w-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dignissimos labore optio dolorum beatae consequuntur dolor veritatis expedita veniam aliquam doloribus iusto deserunt hic id laboriosam quidem, excepturi, ea odio?</p>
-        </div>
-        <div class="carousel-item">
-            <p class="d-block w-100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos quaerat magnam saepe quo nam cumque sequi perspiciatis natus autem eius? Error vitae quo, non at aspernatur reprehenderit dolorum laudantium accusantium?</p>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Your Page Title</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<body>
+
+<div class="main-banner" id="top">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-6 align-self-center">
+                        <div class="owl-carousel owl-banner">
+                            <div class="item header-text">
+                                <h6>Core Innovation</h6>
+                                <h2>At  <em>Liquor Logic</em> innovation <span>is at the core of our commitment.</span></h2>
+                                <p>We constantly strive to push boundaries and pioneer new solutions to meet the evolving needs of the liquor industry.</p>
+                                <div class="down-buttons">
+                                    <div class="main-blue-button-hover">
+                                        <a href="#features">Our Features</a>
+                                    </div>
+                                    <div class="call-button">
+                                        <a href="#"><i class="fa fa-phone"></i> 021-300-3499</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item header-text">
+                                <h6>Core Innovation</h6>
+                                <h2>At  <em>Liquor Logic</em> innovation <span>is at the core of our commitment.</span></h2>
+                                <p>We constantly strive to push boundaries and pioneer new solutions to meet the evolving needs of the liquor industry.</p>
+                                <div class="down-buttons">
+                                    <div class="main-blue-button-hover">
+                                        <a href="#features">Our Features</a>
+                                    </div>
+                                    <div class="call-button">
+                                        <a href="#"><i class="fa fa-phone"></i> 021-300-3499</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Product screens and other columns remain unchanged -->
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- Optional JavaScript; choose one of the two -->
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<!-- Add your form for theme selection here -->
+<div>
+    <form id="themeForm" method="post" action="/Home/SetTheme">
+        <label for="theme">Select Theme:</label>
+        <select id="theme" name="theme">
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+        </select>
+        <button type="submit">Set Theme</button>
+    </form>
+</div>
 
 <script>
-    // Activate Carousel with Fade Transition
-    $('#carouselExampleParagraphs').carousel({
-        interval: 5000, // Set the interval as per your requirement
-        pause: 'hover',
-        wrap: true
+$(document).ready(function() {
+    $('.item.header-text p').each(function() {
+        $(this).delay(500).addClass('slide-fade');
     });
+
+    // AJAX form submission for setting theme
+    $('#themeForm').on('submit', function(event) {
+        event.preventDefault();
+        $.ajax({
+            type: "POST",
+            url: $(this).attr('action'),
+            data: $(this).serialize(),
+            success: function(response) {
+                if (response.success) {
+                    alert("Theme set successfully!");
+                } else {
+                    alert("Failed to set theme.");
+                }
+            },
+            error: function() {
+                alert("Error in setting theme.");
+            }
+        });
+    });
+});
 </script>
+
+</body>
+</html>
