--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,65 @@
-﻿@{
+﻿@* @{
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Use this page to detail your site's privacy policy.</p> *@
+
+
+ <div id="About" class="about-us section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 align-self-center">
+          <div class="left-image">
+            <img src="images/product-features.png" alt="Product Features Liquor Logic">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="section-heading">
+            <h2>Picture this: <em>a dynamic team of tech wizards,</em> <span>creative masterminds,</span> and liquor aficionados coming together to shake up the industry like never before.</h2>
+            <p>At Liquor Logic, we're not just about software – we're about setting the bar higher (pun intended) and crafting experiences that leave your taste buds tingling and your business booming! <br>
+                        Gone are the days of dusty old systems and manual processes. With our cutting-edge technology solutions, we're flipping the script and giving liquor businesses the tools they need to thrive in today's fast-paced world.<br> From sleek interfaces to seamless integrations, we've got everything you need to take your business from good to grape-tastic!<br><br>
+            </p>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="fact-item">
+                  <div class="count-area-content">
+                    <div class="icon">
+                      <img src="images/service-icon-01.png" alt="">
+                    </div>
+                    <div class="count-digit">1421320</div>
+                    <div class="count-title">Lines of Code</div>
+                    <p>A lot more than one can imagine</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="fact-item">
+                  <div class="count-area-content">
+                    <div class="icon">
+                      <img src="images/service-icon-02.png" alt="">
+                    </div>
+                    <div class="count-digit">2142</div>
+                    <div class="count-title">Hangover-Free Mondays</div>
+                    <p>Our software turns Sunday Funday into Monday Marvelous!</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="fact-item">
+                  <div class="count-area-content">
+                    <div class="icon">
+                      <img src="images/service-icon-03.png" alt="">
+                    </div>
+                    <div class="count-digit">3651</div>
+                    <div class="count-title">Hoppy Hours Extended</div>
+                    <p>Of enjoyment by optimizing production schedules.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
